<resources>
    <string name="app_name">Coin_Coin_Mobile</string>
    <string name="button">Button</string>
    <string name="todo">TODO</string>
    <string name="mes_projets">Mes Projets</string>
    <string name="Conteneur" />
    <string name="un_projet_exemple">Un projet exemple</string>
    <string name="projet">Projet</string>
    <string name="entrer_votre_nom">Entrer votre nom</string>
    <string name="mot_de_passe">Mot De Passe</string>
    <string name="nouveau_mot_de_passe">Nouveau Mot De Passe</string>
    <string name="mes_comptes">Mes Comptes</string>
    <string name="mon_compte">Mon Compte</string>
    <string name="mon_projet">Mon Projet</string>
    <string name="texteBienvenue">Bienvenue sur \n Coin Coin</string>
    <string name="hintCourriel">Entrez votre adresse courriel</string>
    <string name="hintPassword">Entrez votre mot de passe</string>
    <string name="seConnecter">Connexion</string>
    <string name="creerCompte"><u>Créez-vous un compte</u></string>
    <string name="compte">Compte</string>
    <string name="projets">Projets</string>
    <string name="inscription">Inscription</string>
    <string name="prenom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="courriel">Adresse courriel</string>
    <string name="confirmer_mdp">Confirmer votre mot de passe</string>
    <string name="num_tel">Numéro de téléphone (Optionnel)</string>
    <string name="confirmer_inscription"> Confirmer votre inscription</string>
    <string name="depots">Dépots</string>
    <string name="retraits">Retraits</string>
    <string name="numtel">NumTel</string>
    <string name="ajouterProjet">+</string>
    <string name="txtAjouterProjet">Ajouter un projet</string>
    <string name="nomProjet">Nom du projet</string>
    <string name="montantCible">Montant cible</string>
    <string name="radioTemps">Selon le temps</string>
    <string name="radioBudget">Selon le budget</string>
    <string name="dateCible">Date cible</string>
    <string name="montantDepot">Dépôt</string>
    <string name="montantRetrait">Retrait</string>
    <string name="creationProjet">Créer</string>
    <string name="elie">Élie Tremblay</string>
    <string name="justin">Justin Lavoie-Ladouceur</string>
    <string name="louis">Louis-Simon Leclerc</string>
    <string name="niko">Nikola Sunjka</string>
    <string name="gab">Gabriel Loubier</string>
    <string name="suppProjet">Supprimer</string>

</resources>