<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".PageAccueil">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintTop"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/header_jaune"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageLogo"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/circle_white"
                android:contentDescription="@string/todo"
                android:elevation="16dp"
                android:src="@drawable/logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.162"
                tools:ignore="MissingConstraints,ImageContrastCheck" />

            <TextView
                android:id="@+id/tvAccueil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/galindo"
                android:gravity="center"
                android:text="Bon retour,\n[nomClient]"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayoutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintTop">

        <Button
            android:id="@+id/btnProjet"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/stylebouton"
            android:fontFamily="@font/galindo"
            android:gravity="center"
            android:stateListAnimator="@animator/scale_on_click"
            android:text="@string/projets"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            app:backgroundTint="#D9D9D9" />

        <Button
            android:id="@+id/btnCompte"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:background="@drawable/stylebouton"
            android:fontFamily="@font/galindo"
            android:gravity="center"
            android:stateListAnimator="@animator/scale_on_click"
            android:text="@string/compte"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            app:backgroundTint="#D9D9D9" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="#45474B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/layoutHorAccueil"
            android:layout_width="409dp"
            android:layout_height="118dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/github_logo" />

            <LinearLayout
                android:id="@+id/layoutVertNoms"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtNomElie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/galindo"
                    android:text="@string/elie"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/txtNomJustin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/galindo"
                    android:text="@string/justin"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/txtNomLouis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/galindo"
                    android:text="@string/louis"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/txtNomNiko"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/galindo"
                    android:text="@string/niko"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/txtNomGab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/galindo"
                    android:text="@string/gab"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>