<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PageCreationCompte">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constLayoutTop"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/header_jaune"
        android:gravity="top"
        android:orientation="horizontal"
        app:cardElevation="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessParent">

        <ImageButton
            android:id="@+id/btnRetour"
            android:layout_width="42dp"
            android:layout_height="39dp"
            android:layout_marginStart="32dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/button"
            android:elevation="16dp"
            android:scaleType="fitXY"
            android:src="@drawable/fleche"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.395"
            tools:ignore="RedundantDescriptionCheck" />

        <TextView
            android:id="@+id/txtTitre"
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/galindo"
            android:text="@string/inscription"
            android:textAlignment="center"
            android:textColor="#040303"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageLogo"
            app:layout_constraintStart_toEndOf="@id/btnRetour"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.39"
            tools:ignore="MissingConstraints,TextSizeCheck" />

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="79dp"
            android:layout_height="78dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/circle_white"
            android:contentDescription="@string/todo"
            android:elevation="16dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.162"
            tools:ignore="MissingConstraints,ImageContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/vertLayInscription"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constLayoutTop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/editPrenom"
                android:layout_width="323sp"
                android:layout_height="48dp"
                android:layout_marginTop="4dp"
                android:autofillHints=""
                android:background="@drawable/input_box"
                android:elevation="8dp"
                android:enabled="true"
                android:fontFamily="@font/junge"
                android:gravity="center"
                android:hint="@string/prenom"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:stateListAnimator="@animator/scale_on_click"
                android:textColor="@android:color/black"
                android:textColorHint="#000000"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline5"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toTopOf="@+id/guideline2"
                tools:ignore="MissingConstraints,TextContrastCheck" />

            <EditText
                android:id="@+id/editNom"
                android:layout_width="323sp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:background="@drawable/input_box"
                android:elevation="8dp"
                android:enabled="true"
                android:fontFamily="@font/junge"
                android:gravity="center"
                android:hint="@string/nom"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:stateListAnimator="@animator/scale_on_click"
                android:textColor="@android:color/black"
                android:textColorHint="#000000"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline5"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toBottomOf="@+id/editPrenom"
                tools:ignore="MissingConstraints,TextContrastCheck" />

            <EditText
                android:id="@+id/editCourriel"
                android:layout_width="323sp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:background="@drawable/input_box"
                android:elevation="8dp"
                android:enabled="true"
                android:fontFamily="@font/junge"
                android:gravity="center"
                android:hint="@string/courriel"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:stateListAnimator="@animator/scale_on_click"
                android:textColor="@android:color/black"
                android:textColorHint="#000000"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline5"
                app:layout_constraintHorizontal_bias="0.489"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toBottomOf="@+id/editEmail"
                tools:ignore="MissingConstraints,TextContrastCheck" />

            <EditText
                android:id="@+id/editTel"
                android:layout_width="323sp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:background="@drawable/input_box"
                android:elevation="8dp"
                android:enabled="true"
                android:fontFamily="@font/junge"
                android:gravity="center"
                android:hint="@string/num_tel"
                android:inputType="phone|number"
                android:padding="12dp"
                android:stateListAnimator="@animator/scale_on_click"
                android:textColor="@android:color/black"
                android:textColorHint="#000000"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline5"
                app:layout_constraintHorizontal_bias="0.489"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toBottomOf="@+id/editEmail"
                tools:ignore="MissingConstraints,TextContrastCheck" />


            <EditText
                android:id="@+id/editMDP"
                android:layout_width="323sp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:background="@drawable/input_box"
                android:elevation="8dp"
                android:enabled="true"
                android:fontFamily="@font/junge"
                android:gravity="center"
                android:hint="@string/mot_de_passe"
                android:inputType="textPassword"
                android:padding="12dp"
                android:stateListAnimator="@animator/scale_on_click"
                android:textColor="@android:color/black"
                android:textColorHint="#000000"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline5"
                app:layout_constraintHorizontal_bias="0.489"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toBottomOf="@+id/editEmail"
                tools:ignore="MissingConstraints,TextContrastCheck" />

            <EditText
                android:id="@+id/editMDPConfirm"
                android:layout_width="323sp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:background="@drawable/input_box"
                android:elevation="8dp"
                android:enabled="true"
                android:fontFamily="@font/junge"
                android:gravity="center"
                android:hint="@string/confirmer_mdp"
                android:inputType="textPassword"
                android:padding="12dp"
                android:stateListAnimator="@animator/scale_on_click"
                android:textColor="@android:color/black"
                android:textColorHint="#000000"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline5"
                app:layout_constraintHorizontal_bias="0.489"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toBottomOf="@+id/editEmail"
                tools:ignore="MissingConstraints,TextContrastCheck" />

            <Button
                android:id="@+id/btnConfirmer"
                android:layout_width="280sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="-2dp"
                android:backgroundTint="#F4CE14"
                android:elevation="8dp"
                android:fontFamily="@font/junge"
                android:stateListAnimator="@animator/scale_on_click"
                android:text="@string/confirmer_inscription"
                android:textColor="@android:color/white"
                android:textSize="16sp" />


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>